force-app/main/default/objects/New_Record_Field_List__mdt/New_Record_Field_List__mdt.object-meta.xml
<CustomObject>
    <label>New Record Field List</label>
    <pluralLabel>New Record Field Lists</pluralLabel>
</CustomObject>