force-app/main/default/objects/New_Record_Field_List__mdt/fields/Is_Mandantory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandantory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandantory</label>
    <type>Checkbox</type>
</CustomField>