force-app/main/default/objects/New_Record_Field_List__mdt/fields/Lookup_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object_API_Name__c</fullName>
    <label>Lookup Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>